--- a/src/styles/pages/Experience.css
+++ b/src/styles/pages/Experience.css
@@ -6,8 +6,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
-    padding-top: 8vmax;
 }
 
 .experience-title {
