--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -37,7 +37,7 @@
 
 @media screen and (max-width: 768px) {
     .home-subheading {
-        max-width: 65vw;
+        max-width: 75vw;
     }
 }
 
